# git-t5

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: config.py  train_tokenizer.py
conf/: config.yaml  config_model.yaml  config_tokenizer.yaml
conf/arguments/: tokenizer_args.yaml
conf/data/: huggingface.yaml  local.yaml
conf/logger/: wandb.yaml
conf/model/: huggingface.yaml
conf/tokenizer_model/: sentencepiece.yaml
conf/tokenizer_trainer/: sentencepiece.yaml
conf/training/: huggingface.yaml
git_t5/: __init__.py  tokenizer_model.py  tokenizer_trainer.py
git_t5/cli/: config.py  train_model.py  train_tokenizer.py
git_t5/cli/conf/: config.yaml  config_model.yaml  config_tokenizer.yaml
git_t5/cli/conf/data/: huggingface.yaml
git_t5/cli/conf/dataset/: default.yaml  huggingface.yaml  local.yaml  multitask.yaml
git_t5/cli/conf/optimizer/: adafactor.yaml  adagrad.yaml  adam.yaml  adamw.yaml
git_t5/cli/conf/optimizer/scheduler/: constant.yaml  inverse_square_root.yaml  linear.yaml  polynomial.yaml
git_t5/cli/conf/tokenizer/: huggingface.yaml
git_t5/cli/conf/tokenizer_trainer/tokenizer/: sentencepiece.yaml
git_t5/cli/conf/trainer/: huggingface.yaml
git_t5/core/: __init__.py  data_module.py  logger.py  model.py  optimizers.py  schedulers.py  tokenizer_model.py  tokenizer_trainer.py  trainer.py
git_t5/core/configs/: __init__.py  dataset.py  tokenizer.py  training.py
git_t5/data/: __init__.py  data_collator.py  data_loader.py  data_preprocessing.py  dataset.py
git_t5/utils/: __init__.py  common.py  distributed.py  resolvers.py
git_t5/utils/code_tools/: __init__.py  diffgen.py  tokenizer.py
src/: __init__.py  tokenizer_model.py
src/data/: data_collator.py
src/preprocessing/: __init__.py  html_stripper.py  tokenizer.py  unidiff_builder.py
src/utils/: unidiff_builder.py
