[tool.poetry]
name = "git-t5"
version = "0.1.0"
description = ""
authors = ["mozharovsky <mozharovsky@live.com>"]

[tool.poetry.scripts]
gt5-train-tokenizer = 'git_t5.cli.train_tokenizer:main'

[tool.poetry.dependencies]
python = "^3.7"
jax = "^0.2.18"
jaxlib = "^0.1.69"
flax = "^0.3.4"
optax = "^0.0.9"
transformers = "^4.9.0"
datasets = "^1.10.1"
hydra-core = "^1.1.0"
wandb = "^0.11.0"
sacrebleu = "^1.5.1"
typing-extensions = { version = "^3.7.4", python = "<3.8" }

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
