[tool.poetry]
name = "git-t5"
version = "0.2.1"
description = "Open source machine learning framework for training T5 models on source code in JAX/Flax."
authors = ["mozharovsky <mozharovsky@live.com>"]
maintainers = ["mozharovsky <mozharovsky@live.com>"]
repository = "https://github.com/formermagic/git-t5"
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Topic :: Software Development :: Libraries"]
keywords = ["nlp", "machine-learning", "machine-learning-library", "transformers", "t5", "t5-jax", "code-t5"]
include = ["git_t5", "LICENSE", "README.md"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
gt5-train-tokenizer = 'git_t5.cli.train_tokenizer:main'
gt5-train-model = 'git_t5.cli.train_model:main'

[tool.poetry.dependencies]
python = "^3.7"
jax = "^0.2.19"
flax = "^0.3.4"
optax = "^0.0.9"
torch = "^1.9.0"
transformers = "^4.10.0"
datasets = "^1.11.0"
hydra-core = "^1.1.1"
more-itertools = "^8.8.0"
wandb = "^0.12.1"
sacrebleu = "^1.5.1"
typing-extensions = { version = "^3.10.0.2", python = "<3.8" }

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
